# MiniMax-UI

./: .env_example  .gitignore  README.md  config.example.js  main.py  package-lock.json  package.json  pyproject.toml  simple.html  start.sh
backend/: __init__.py  app.py  config.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: SimpleTextToAudio.tsx  TextToAudioGenerator.tsx  VoiceGenerator.tsx
frontend/src/components/ui/: select.tsx
src/app/: page.tsx
src/components/: VoiceGenerator.tsx
